--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Stacked. | A simple to-do app</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="main.js" defer></script>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="wrapper">
+           <header>
+            <h1 id="Title">Stacked.</h1>
+            <h2>A simple to-do app</h2>
+            </header>
+            <main>
+                <form id="taskForm">
+                    <input autocomplete="off" type="text" id="task" autofocus="on">
+                </form>
+                <ol id="tasks">
+                </ol>
+            </main>  
+        </div>
+    </div>
 </body>
 </html>
