--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </header>
             <main>
                 <form id="taskForm">
-                    <input autocomplete="off" type="text" id="task" autofocus="on">
+                    <input autocomplete="off" type="text" id="task-input" autofocus="on" maxlength="64">
                 </form>
                 <ol id="tasks">
                 </ol>
